bk_ida/gccida/c3/_cpp_append_extend_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2488:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 * cpp_append_extend_buff( cpp_reader_0 *pfile, _cpp_buff_0 *buff, size_t min_extra) 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2488:39: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
_cpp_buff_0 * cpp_append_extend_buff( cpp_reader_0 *pfile, _cpp_buff_0 *buff, size_t min_extra) 
                                      ^~~~~~~~~~~~
                                      cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2488:60: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 * cpp_append_extend_buff( cpp_reader_0 *pfile, _cpp_buff_0 *buff, size_t min_extra) 
                                                           ^~~~~~~~~~~
                                                           _cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2491:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *free_buffs; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2494:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_next; // rdi 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2510:29: error: expected expression
free_buffs = ( _cpp_buff_0 *)&v11[v10]; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/cpplex.c:2510:16: error: use of undeclared identifier '_cpp_buff_0'
free_buffs = ( _cpp_buff_0 *)&v11[v10]; 
               ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_append_extend_buff/src/obj/cpplex.o] Error 1
